--- a/react-app/src/components/Profile/Profile.css
+++ b/react-app/src/components/Profile/Profile.css
@@ -8,15 +8,15 @@
 .profileTab {
   cursor: pointer;
   text-align: center;
-  background-color: rgba(74, 135, 128, 0.25);
+  background-color: rgba(37, 148, 41, 0.839);
   border-radius: 15px;
   padding: 10px 15px;
 }
 .profileTab:hover {
-  background-color: rgba(58, 102, 115, 0.5);
+  background-color: rgba(255, 251, 0, 0.838);
 }
 .profileTab#selected {
-  background-color: rgba(58, 102, 115, 0.75);
+  background-color: rgba(38, 255, 0, 0.838);
 }
 
 .profileTabDisplay {
@@ -28,13 +28,14 @@
   width: 100%;
   padding: 5px;
   margin: 5px;
+  height: 30px;
 }
 .profileButtonContainer > a {
   width: 50%;
 }
 .profileButtonContainer > a > button {
   width: 100%;
-  margin: 10px 0px;
+  /* margin: 10px 0px; */
   display: flex;
   width: 100%;
   height: 100%;
@@ -45,20 +46,26 @@
   border: none;
   border-radius: 15px;
 }
+.delete-profile > button {
+  cursor: pointer;
+  background: red;
+  color: white;
+}
+.delete-profile > button:hover {
+  cursor: pointer;
+  background: black;
+}
+.delete-button-container {
+  background-color: red;
+}
 
 .delete-profile {
   width: 50%;
 }
-/* .delete-button-container {
-  font-size: 18px;
-  width: 70%;
-  color: #ab434a;
-  border: 5px solid #ab434a;
-  border-radius: 12px;
-  background-color: #ab434a;
+.profile-new-post-button:hover {
   cursor: pointer;
-  position: relative;
-} */
+  background: black;
+}
 
 .profileButtonContainer {
   display: flex;
@@ -96,6 +103,7 @@
 .indvUserReviews {
   /* display: flex; */
   min-width: 200px;
+  max-width: 350px;
   max-height: 250px;
   justify-content: center;
   align-items: center;
@@ -103,6 +111,9 @@
 }
 .indvUserReviews {
   overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .indvUserPosts:hover,
 .indvUserReviews:hover {
