--- a/react-app/src/components/PostForm/postFormStyles.css
+++ b/react-app/src/components/PostForm/postFormStyles.css
@@ -115,7 +115,7 @@ label {
   background: rgb(0, 255, 217);
   box-shadow: 10px 15px 20px rgba(125, 23, 234, 0.8);
   transform: translateY(-7px);
-  cursor: point;
+  cursor: pointer;
 }
 
 .errors-info {
