--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -34,3 +34,27 @@
 /* .add-review-button {
   width: 50%;
 } */
+.add-reply-button {
+  padding: 0 10px;
+  margin-top: 0;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  transition: all 0.3s ease 0s;
+  border: none;
+  border-radius: 15px;
+}
+.add-reply-button button {
+  padding: 0 10px;
+  margin: 0 10px;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  transition: all 0.3s ease 0s;
+  border: none;
+  border-radius: 15px;
+}
