--- a/react-app/src/components/AnimePage/animePage.css
+++ b/react-app/src/components/AnimePage/animePage.css
@@ -177,15 +177,30 @@
   background-color: rgb(149, 0, 255);
 }
 .add-reply-button {
-  padding: 0 10px;
   margin: 0 10px;
   width: 100%;
   height: 100%;
   align-items: center;
   justify-content: center;
   flex-direction: row;
-  transition: all 0.3s ease 0s;
   border: none;
+  border-radius: 15px;
+  cursor: pointer;
+}
+.add-reply-button button {
+  padding: 10px;
+  background: green;
+  transition: all 0.3s ease 0s;
+  color: white;
+  border-radius: 15px;
+  cursor: pointer;
+}
+.add-reply-button button:hover {
+  padding: 10px;
+  background: rgb(215, 226, 9);
+  box-shadow: 10px 15px 25px rgb(144, 238, 144, 0.8);
+  color: black;
+  cursor: pointer;
   border-radius: 15px;
 }
 /* .animeTabDisplay {
