--- a/react-app/src/components/SignupFormModal/SignupForm.css
+++ b/react-app/src/components/SignupFormModal/SignupForm.css
@@ -91,7 +91,7 @@ form {
   box-shadow: 8px 8px 15px rgba(255, 248, 54, 0.8);
   border: none;
   height: 40px;
-  transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0;
 }
 
 .sign-up-button:hover {
