--- a/react-app/src/components/LoginFormModal/LoginForm.css
+++ b/react-app/src/components/LoginFormModal/LoginForm.css
@@ -56,6 +56,7 @@ form {
   border-radius: 15px;
 }
 .login-form-button button {
+  border-radius: 15px;
   width: 100%;
   background: rgb(255, 255, 28);
   box-shadow: 8px 8px 15px rgba(255, 248, 54, 0.8);
@@ -78,6 +79,7 @@ form {
   border-radius: 15px;
 }
 .demo-user-button button {
+  border-radius: 15px;
   width: 100%;
   background: rgb(255, 255, 28);
   box-shadow: 8px 8px 15px rgba(255, 248, 54, 0.8);
